--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "douyin-mcp-server"
-version = "1.1.0"
+version = "1.2.0"
 description = "MCP server for downloading Douyin videos and extracting text"
 readme = "README.md"
 license = {text = "MIT"}
@@ -28,6 +28,7 @@ dependencies = [
     "requests",
     "ffmpeg-python",
     "tqdm",
+    "dashscope",
 ]
 
 [project.urls]
